--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: flutter_preload_videos
 description: Preload multiple videos with dispose and play functionality
 
-publish_to: "none" 
+publish_to: "none"
 
 version: 1.0.0+1
 
@@ -16,13 +16,13 @@ dependencies:
   flutter_isolate: ^2.0.4
   injectable: ^2.3.2
   injectable_generator: ^2.4.1
-  media_kit: ^1.1.10+1                 
+  media_kit: ^1.1.10+1
   media_kit_video: ^1.2.4
   media_kit_libs_video: ^1.0.4
   better_player:
-    git: 
+    git:
       url: https://github.com/liuchuancong/better_player.git
-      ref: 'media3'
+      ref: "media3"
 
 dev_dependencies:
   flutter_test:
