--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,14 +11,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_bloc: ^8.1.3
-  video_player: ^2.8.2
-  flutter_isolate: ^2.0.4
+  flutter_bloc: ^8.1.6
+  video_player: ^2.9.2
+  flutter_isolate: ^2.1.0
   injectable: ^2.3.2
-  injectable_generator: ^2.4.1
-  media_kit: ^1.1.10+1
-  media_kit_video: ^1.2.4
-  media_kit_libs_video: ^1.0.4
+  injectable_generator: ^2.6.2
+  media_kit: ^1.1.11
+  media_kit_video: ^1.2.5
+  media_kit_libs_video: ^1.0.5
   better_player:
     git:
       url: https://github.com/liuchuancong/better_player.git
@@ -27,8 +27,12 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  build_runner: ^2.4.8
-  freezed: ^2.4.7
+  build_runner: ^2.4.13
+  freezed: ^2.5.7
+
+dependency_overrides:
+  archive: ^3.6.1
+  win32: ^5.7.2
 
 flutter:
   uses-material-design: true
